k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: aws-demo-project }
spec:
  replicas: 1
  selector: { matchLabels: { app: aws-demo-project } }
  template:
    metadata: { labels: { app: aws-demo-project } }
    spec:
      securityContext: { runAsNonRoot: true }
      containers:
        - name: aws-demo-project
          image: REPLACE_IMAGE
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8080 }]
          readinessProbe:
            httpGet: { path: "/", port: 8080 }   # change if you have /actuator/health
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: "/", port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits:   { cpu: "500m", memory: "512Mi" }
