k8s/service.yaml
apiVersion: v1
kind: Service
metadata: { name: aws-demo-project }
spec:
  selector: { app: aws-demo-project }
  ports:
    - name: http
      port: 80
      targetPort: 8080
